made mobile menu smaller, started with about us page (google maps, vision and mission), fixed section padding, fixed the grids for mobile (column-gap), made a shadow for image text for better visibility, changed languageicons to simple text link

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,5 @@
 .menu-wrap {
+  display: absolute;
   position: fixed;
   top: 0;
   left: 0;
@@ -7,7 +8,8 @@
 }
 
 .menu-wrap .toggler {
-  position: absolute;
+  display: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9;
@@ -19,7 +21,7 @@
 
 .menu-wrap .hamburger {
   
-  width: 60px;
+  width: 40px;
   height: 60px;
   padding: 1rem;
   background: transparent;
@@ -33,6 +35,7 @@
 /* Hamburger Line */
 
 .menu-wrap .hamburger > div {
+  display: absolute;
   position: relative;
   width: 100%;
   height: 4px;
